# procurement-intelligence

./: .gitignore  README.md  TECHNICAL_WALKTHROUGH.md  docker-compose.yml  package-lock.json  playwright.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base.py  prompts.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py  demo.py  dependencies.py  report.py  upload.py  vote.py
backend/app/services/: data_processor.py  report_generator.py  session_store.py
backend/data/: demo_summary.py  synthetic_spend.csv  synthetic_spend_small.csv
backend/scripts/: generate_data.py
backend/tests/: conftest.py  test_analyze_sse.py  test_azure_openai.py  test_data_processor.py  test_demo.py  test_health.py  test_report.py  test_schemas.py  test_session_store.py  test_sessions.py  test_upload.py  test_vote.py
e2e/: demo-flow.spec.ts  upload-flow.spec.ts
e2e/fixtures/: test-data.csv
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/app/arena/: page.tsx
frontend/src/app/preview/: page.tsx
frontend/src/components/: AgentCard.tsx  ArenaBoard.tsx  BehaviouralInsight.tsx  ColumnMapping.tsx  ComparisonTable.tsx  DataOverview.tsx  DataQualityTable.tsx  ExportReportButton.tsx  FileUpload.tsx  Header.tsx  LoadingSpinner.tsx  NavLinks.tsx  ProgressBar.tsx  RecommendationList.tsx  SessionList.tsx  VotePanel.tsx
frontend/src/lib/: api.ts  constants.ts  sse.ts  utils.ts
frontend/src/store/: atoms.ts
frontend/src/test/: agent-card.test.tsx  api.test.ts  arena-sse-integration.test.tsx  behavioural-insight.test.tsx  comparison-table.test.tsx  export-report-button.test.tsx  landing-demo-button.test.tsx  smoke.test.ts  sse.test.ts  vote-panel.test.tsx
frontend/src/types/: index.ts
infra/: main.bicep  main.bicepparam
(+4 files in other folders)
